fix: hero image not showing

--- a/resources/css/hero.css
+++ b/resources/css/hero.css
@@ -1,6 +1,6 @@
 .hero {
     position: relative;
-    background-image: url("../../public/images/hero-bg.jpg");
+    background-image: url("../../public/images/hero/hero-image.jpg");
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
